--- a/form-app/src/Form.css
+++ b/form-app/src/Form.css
@@ -10,3 +10,9 @@ input {
     margin-top: 20px;
     margin-left: 20px;
 }
+
+span {
+    color: red;
+    font-size: 10px;
+    margin-left: 10px;
+}
